--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css"/>
+    <script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
   </head>
   <body>
     <noscript>
