formatted address and tab name

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     -->
 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <title>Byte App</title>
+    <title>The Byte App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
